# sandbox-c

./: .containerignore  .gitignore  Makefile  README.md  compose.yaml  meson.build
container/: Containerfile
src/: greeting.c  main.c  main.h
tests/: test_main.c
